objects/SMS_History__c.object
<CustomObject>
    <label>SMS History</label>
    <pluralLabel>SMS Histories</pluralLabel>
    <nameField>
        <label>SMS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>

    <!-- Lookups -->
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>Lookup</type>
        <referenceTo>Contact</referenceTo>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <type>Lookup</type>
        <referenceTo>Lead</referenceTo>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <type>Lookup</type>
        <referenceTo>Campaign</referenceTo>
    </fields>

    <!-- Core fields -->
    <fields>
        <fullName>Message_Text__c</fullName>
        <label>Message Text</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Template_Used__c</fullName>
        <label>Template Used</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <restricted>true</restricted>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Retried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Sent_Timestamp__c</fullName>
        <label>Sent Timestamp</label>
        <type>DateTime</type>
    </fields>

    <!-- summary fields -->
    <!-- (REMOVED: Total_Records__c, Sent_Count__c, Failed_Count__c, Template_Used__c) -->
</CustomObject>